# project-management

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  makefile  pyproject.toml
project_management/: __init__.py  main.py
project_management/config/: settings.py
project_management/models/: __init__.py  applications.py  constants.py  events.py  exceptions.py  expanded_models.py  flavors.py  interfaces.py  operatingsystems.py  profiles.py  projects.py  repositories.py  servers.py
project_management/routes/: __init__.py  api_metadata.py  applications.py  flavors.py  operatingsystems.py  profiles.py  projects.py  repositories.py
project_management/services/: applications.py  database_service.py  flavors.py  operatingsystems.py  other_services.py  profiles.py  projects.py  repositories.py
project_management/utils/: keycloak_config.py  keycloak_utils.py
tests/: common_test_utils.py
tests/component/: test_applications.py  test_applications_x_operatingsystems.py  test_flavors.py  test_operatingsystems.py  test_profiles.py  test_projects.py  test_repositories.py  test_validation.py
tests/mock_data/: desp-aas-config.yaml  test_data.py
tests/unit/: test_unit.py
