[project]
name = "project-management-service"
version = "1.0.0"
description = "Microservice handling projects"
authors = []
requires-python = ">=3.12"


dependencies = [
    "msfwk>=1.0.19",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.3",
    "despsharedlibrary>=1.0.10",
    "pytest-env>=1.1.4",
    "python-keycloak==4.4.0",
]

[tool.uv.sources]
msfwk = { path = "libs/base-service" }
despsharedlibrary = { path = "libs/desp_shared_library" }
